change version of java & spring